<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.n07072.myapplication.DisplayMessageActivity">

    <TextView
        android:id="@+id/custLabel1"
        android:layout_width="wrap_content"
        android:layout_below="@+id/button_container"
        android:layout_height="wrap_content"
        android:text="Jens" />

</RelativeLayout>
